<resources>
    <string name="app_name">LineTV</string>

    <!-- Main Drama Fragment -->
    <string name="mock_name">俗女養成記</string>
    <string name="mock_rating">4.9</string>
    <string name="mock_created_at">2020&#8211;01&#8211;01</string>
    <string name="mock_view">200k</string>
    <string name="hint_search">依關鍵字搜尋</string>

    <!-- Menu -->
    <string name="rating">依評分</string>
    <string name="created_at">依建立日期</string>
    <string name="total_view">依觀看次數</string>

    <!-- Detail Fragment -->
    <string name="drama_name">片名:</string>
    <string name="drama_rating">評分:</string>
    <string name="drama_created_at">出版日期:</string>
    <string name="drama_view">觀看次數:</string>

    <!-- General -->
    <string name="internet_refresh">開啟網路後記得下拉頁面刷新~</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="you_know_nothing">You know nothing</string>
    <string name="toolbar_title">LINE TV</string>
</resources>
