<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="studio.honidot.linetv.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_drama"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            app:imageUrl="@{viewModel.drama.thumb}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_drama_name"
            app:srcCompat="@drawable/loading" />

        <TextView
            android:id="@+id/text_drama_name"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.drama.name}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/image_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mock_name" />

        <TextView
            android:id="@+id/text_drama_rating"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@{String.valueOf(viewModel.drama.rating)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_rating_title"
            app:layout_constraintStart_toEndOf="@+id/text_rating_title"
            tools:text="@string/mock_rating" />

        <TextView
            android:id="@+id/text_drama_created_time"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_created_time_title"
            app:layout_constraintStart_toEndOf="@+id/text_created_time_title"
            app:shrankCreatedTime="@{viewModel.drama.createdAt}"
            tools:text="@string/mock_created_at" />

        <TextView
            android:id="@+id/text_drama_view"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:addComma="@{viewModel.drama.totalViews}"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_title"
            app:layout_constraintStart_toEndOf="@+id/text_view_title"
            tools:text="@string/mock_view" />

        <TextView
            android:id="@+id/text_rating_title"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/drama_rating"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_star"
            app:layout_constraintStart_toEndOf="@+id/image_star"
            app:layout_constraintTop_toTopOf="@+id/image_star" />

        <TextView
            android:id="@+id/text_created_time_title"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/drama_created_at"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_clock"
            app:layout_constraintStart_toEndOf="@+id/image_clock"
            app:layout_constraintTop_toTopOf="@+id/image_clock" />

        <TextView
            android:id="@+id/text_view_title"
            style="@style/DramaContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/drama_view"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_eye"
            app:layout_constraintStart_toEndOf="@+id/image_eye"
            app:layout_constraintTop_toTopOf="@+id/image_eye" />

        <ImageView
            android:id="@+id/image_eye"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/image_star"
            app:layout_constraintTop_toBottomOf="@+id/image_star"
            app:srcCompat="@drawable/eye" />

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_drama"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/image_clock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/image_star"
            app:layout_constraintTop_toBottomOf="@+id/image_eye"
            app:srcCompat="@drawable/clock" />

        <ImageView
            android:id="@+id/image_top"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:visibility="@{viewModel.drama.totalViews>10000000?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_drama_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_drama_name"
            app:srcCompat="@drawable/top" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>